Code create new user function(admin dashboard)

--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/application.properties
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/BikeShopAdmin
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bikeshopdb
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
